# osml-geo-agents

./: .clineignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.clinerules/: 00-project-overview.md  01-python-coding.md  02-tox-environment.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-pr-reviewer.yml  build-test-destroy.yml  build.yml  cdk.yml  deploy.yml  destroy.yml  pre-commit.yml  run-integration-tests.yml  tox.yml
.kiro/specs/remove-authentication-infrastructure/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md
cdk/: .eslintrc.js  README.md  cdk.context.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lambda/authorizer/: lambda_function.py
cdk/lib/: bedrock-agent-lambda.ts  nag-suppressions.ts  network-stack.ts  osml-geo-agent-stack.ts  osml-geo-agent-tool-lambda.ts  stack-props.ts  test-stack.ts
cdk/osml-geo-agents-config/: description.txt  instruction.txt  overrides.json
cdk/test/: cdk-nag.test.ts  cdk.test.ts  validation.test.ts
conda/: agent-environment.yml  environment.test.yml
doc/: conf.py  index.rst
docker/: Dockerfile.agents  Dockerfile.integ  Dockerfile.mcp  docker-compose.yml
scripts/: destroy.sh  geo_agents_integ.sh
test/: integ_processor.py  processor_base.py
test/data/: recent_earthquakes.geojson  significant_earthquakes.geojson
test/integration/: __init__.py  conftest.py  test_config.py  test_geo_agents.py  test_mcp_client.py
test/utils/: __init__.py  logger.py
(+107 files in other folders)
