[metadata]
name = osml-geo-agents
version = 0.1.0
description = Package of geospatial tools for use by AWS Bedrock.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license_files = LICENSE
project_urls =
    Source = https://github.com/awslabs/osml-geo-agents
    Tracker = https://github.com/awslabs/osml-geo-agents/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.12
include_package_data = True

install_requires =

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
test =
    tox
